# planner-bot

./: .dockerignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
planner_bot/: config.py  handlers.py  logger.py  main.py  middlewares.py
planner_bot/database/: models.py  schemas.py  session.py
planner_bot/llm/: __init__.py  client.py  tools.py
planner_bot/scheduler/: tasks.py
planner_bot/services/: __init__.py  projects.py  reminders.py  tasks.py
tests/: conftest.py  test_tasks_service.py
