[project]
name = "planner-bot"
version = "0.1.0"
description = "Telegram planner bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.5.0",
    "aioschedule",
    "pydantic-settings",
    "langchain",
    "httpx",
    "SQLAlchemy>=2.0",
    "psycopg[binary]",
    "alembic",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
